--- a/src/Pixsper.Cueordinator/Views/AppTrayIcon.axaml
+++ b/src/Pixsper.Cueordinator/Views/AppTrayIcon.axaml
@@ -12,7 +12,7 @@
     mc:Ignorable="d">
     <TrayIcon.Menu>
         <NativeMenu>
-            <NativeMenuItem Header="Cueordinator" IsEnabled="False" />
+            <NativeMenuItem Header="{Binding AppVersion, StringFormat=Cueordinator {0}}" IsEnabled="False" />
             <NativeMenuItemSeparator />
             <NativeMenuItem Command="{Binding SyncNow}" Header="Sync Now" />
             <NativeMenuItemSeparator />
