--- a/src/Pixsper.Cueordinator/App.axaml
+++ b/src/Pixsper.Cueordinator/App.axaml
@@ -2,15 +2,30 @@
     x:Class="Pixsper.Cueordinator.App"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:vc="clr-namespace:Pixsper.Cueordinator.ValueConverters"
     xmlns:views="clr-namespace:Pixsper.Cueordinator.Views"
+    xmlns:vm="clr-namespace:Pixsper.Cueordinator.ViewModels"
+    Name="Cueordinator"
     RequestedThemeVariant="Dark">
+    <Application.Resources>
+        <vc:BoolToWindowIconConverter
+            x:Key="BoolToWindowIconConverter"
+            FalseIcon="Resources/icon_menu_bar_template.png"
+            TrueIcon="Resources/icon_menu_bar_disabled_template.png" />
+    </Application.Resources>
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
 
+    <NativeMenu.Menu>
+        <NativeMenu>
+            <NativeMenuItem Click="onOpenAboutWindowClicked" Header="About Cueordinator" />
+        </NativeMenu>
+    </NativeMenu.Menu>
+
     <TrayIcon.Icons>
         <TrayIcons>
-            <views:AppTrayIcon />
+            <views:AppTrayIcon x:DataType="vm:AppTrayIconViewModel" Icon="{Binding IsPaused, Converter={StaticResource BoolToWindowIconConverter}}" />
         </TrayIcons>
     </TrayIcon.Icons>
 </Application>
